[tool.poetry]
name = "xj-checkin"
version = "0.1.0"
description = ""
authors = ["KidoThunder <zgdisgod@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.3"
pyyaml = "^5.3.1"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
